--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
     </section>
-
+    
     <!-- Languages Known Section -->
     <section id="languages" class="section languages" data-aos="fade-up">
       <div class="container">
@@ -231,6 +231,12 @@
             <textarea id="message" name="message" required rows="4" class="peer floating-input resize-none dark:bg-gray-800 dark:text-white" placeholder=" "></textarea>
             <label for="message" class="floating-label dark:text-gray-300">Message</label>
           </div>
+          <button type="submit" class="w-full bg-[#00e6fe] text-white font-semibold py-3 rounded-lg shadow-lg hover:scale-105 hover:shadow-neon transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-[#00e6fe] focus:ring-offset-2">
+            Send Message
+          </button>
+        </form>
+      </div>
+    </section>
       </div>
     </section>
     <div class="section-spacer"></div>
