--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <input type="hidden" name="_captcha" value="false">
           <input type="hidden" name="_subject" value="New Contact Message from Portfolio">
           <input type="hidden" name="_template" value="table">
-          <input type="hidden" name="_next" value="https://neha05prg.github.io/Portfolio1/#contact">
+          <input type="hidden" name="_next" value="https://nihalsanil09.github.io/portfolio/#contact">
           <!-- Name -->
           <div class="relative">
             <input type="text" id="name" name="name" required class="peer floating-input dark:bg-gray-800 dark:text-white" placeholder=" " />
