--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
       <div class="hero-plain-content">
         <img src="nihal.jpg" alt="Profile" class="hero-profile-pic" />
         <h1 class="hero-heading">Hello, I'm Nihal M Sanil</h1>
-        <p class="hero-subtext">Motivated Full Stack Developer passionate about building impactful digital solutions.</p>
+        <p class="hero-subtext">Motivated and detail-oriented BCA graduate with a solid understanding of web development, programming, and database management. I’ve gained strong skills through both academic learning and practical projects, including building websites using HTML, CSS, JavaScript, PHP, and MySQL.
+
+I enjoy working in teams, solving problems, and creating user-friendly web applications. I'm a fast learner with a creative mindset and always open to learning new things.
+
+I'm looking forward to starting my career in the tech industry where I can work on real projects, write clean code, and grow into a skilled Full Stack Developer.</p>
         <a href="#contact" class="cta-btn hero-cta">Let's Connect</a>
       </div>
     </section>
