--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
       <div class="hero-plain-content">
         <img src="nihal.jpg" alt="Profile" class="hero-profile-pic" />
         <h1 class="hero-heading">Hello, I'm Nihal M Sanil</h1>
-        <p class="hero-subtext">Motivated and detail-oriented BCA graduate with a solid understanding of web development, programming, and database management. I’ve gained strong skills through both academic learning and practical projects, including building websites using HTML, CSS, JavaScript, PHP, and MySQL.
-
-I enjoy working in teams, solving problems, and creating user-friendly web applications. I'm a fast learner with a creative mindset and always open to learning new things.
-
-I'm looking forward to starting my career in the tech industry where I can work on real projects, write clean code, and grow into a skilled Full Stack Developer.</p>
+        <p class="hero-subtext">Motivated Full Stack Developer passionate about building impactful digital solutions.</p>
         <a href="#contact" class="cta-btn hero-cta">Let's Connect</a>
       </div>
     </section>
@@ -84,9 +80,8 @@ I'm looking forward to starting my career in the tech industry where I can work 
           <ul class="education-list">
             <li><strong>Degree:</strong> Bachelor of Computer Applications (BCA)</li>
             <li><strong>College:</strong> Milagres College, 2022 – 2025</li>
-            <li><strong>Achievements:</strong> [Add achievements or awards here]</li>
-            <li><strong>Relevant Coursework:</strong> [Add relevant coursework here]</li>
-            <li><strong>CGPA:</strong> [Your CGPA]</li>
+            <li><strong>Course:</strong> <li>Phuthon full stack development on going.</li>
+            </li>
           </ul>
         </div>
       </div>
@@ -125,7 +120,7 @@ I'm looking forward to starting my career in the tech industry where I can work 
           <div class="languages-list">
             <div class="language-item"><span class="language-badge">English</span> <span class="language-level">(Fluent)</span></div>
             <div class="language-item"><span class="language-badge">Hindi</span> <span class="language-level">(Fluent)</span></div>
-            <div class="language-item"><span class="language-badge">Kannada</span> <span class="language-level">(Conversational)</span></div>
+            <div class="language-item"><span class="language-badge">Kannada</span> <span class="language-level">(Fluent)</span></div>
           </div>
         </div>
       </div>
