--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <ul class="education-list">
             <li><strong>Degree:</strong> Bachelor of Computer Applications (BCA)</li>
             <li><strong>College:</strong> Milagres College, 2022 – 2025</li>
-            <li><strong>Course:</strong> <li>Phuthon full stack development on going.</li>
+            <li><strong>Course:</strong> <li>Phython full stack development on going.</li>
             </li>
           </ul>
         </div>
